--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,12 @@
 
 
 body{
-  background-color: white;
+  background-color: rgb(255, 255, 255);
+}
+
+ul{
+  text-decoration: none;
+}
+button{
+  cursor: pointer;
 }
