--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,8 @@ button{
   cursor: pointer;
 }
 .active{
-  @apply text-blue-900 font-extrabold underline;
+  @apply text-blue-900 bg-blue-200 font-extrabold underline;
+}
+li{
+  list-style-type: none;
 }
