--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body{
-  background-color: rgb(255, 255, 255);
+html {
+  width: 100%;
+  margin: 0;
+  height: 100%;
 }
+body{
+  min-height: 100%;
 
+}
 ul{
   text-decoration:none;
 }
